--- a/www.nass.gov.ng/efaf8b3b5225139dc28266021cab8894ef651080.yml
+++ b/www.nass.gov.ng/efaf8b3b5225139dc28266021cab8894ef651080.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 10:51:39 GMT
+    - Fri, 17 Aug 2018 21:05:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=g3XJ6BX9x7NbTOkJBRJKs1; path=/
+    - PHPSESSID=GH0xXE%2CglnuTud3nu%2CLSt3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 10:51:39 GMT
+recorded_at: Fri, 17 Aug 2018 21:05:52 GMT
