--- a/www.nass.gov.ng/6a8071ebafe4737f94e3efea9c6cd174efa06b0e.yml
+++ b/www.nass.gov.ng/6a8071ebafe4737f94e3efea9c6cd174efa06b0e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 10:57:57 GMT
+    - Fri, 17 Aug 2018 21:10:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DletpNP%2C7I7UBCRP8IQG13; path=/
+    - PHPSESSID=TcpUjg933t2rG4kT%2C3Bva2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 10:57:57 GMT
+recorded_at: Fri, 17 Aug 2018 21:10:54 GMT
