--- a/www.nass.gov.ng/7cb0d0807671276c5c4689a9e0d3600d8de2380d.yml
+++ b/www.nass.gov.ng/7cb0d0807671276c5c4689a9e0d3600d8de2380d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 11:02:12 GMT
+    - Fri, 17 Aug 2018 21:13:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FrGnWHE16ZmueW8fy%2C4uU0; path=/
+    - PHPSESSID=A4%2CMMIY3B7U0oYY6n8P1F3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 11:02:12 GMT
+recorded_at: Fri, 17 Aug 2018 21:13:49 GMT
