--- a/www.nass.gov.ng/6010d0da229047fb348b263ae175ea97eb576a1b.yml
+++ b/www.nass.gov.ng/6010d0da229047fb348b263ae175ea97eb576a1b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 11:08:12 GMT
+    - Fri, 17 Aug 2018 21:21:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kxFJTayp1M0Ol34aDBMFU2; path=/
+    - PHPSESSID=dVH2VfPdkj5u0A%2C%2Cj-3f31; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 11:08:15 GMT
+recorded_at: Fri, 17 Aug 2018 21:21:19 GMT
