--- a/www.nass.gov.ng/29c6c421588457d93df76bd85356c4f54bc26867.yml
+++ b/www.nass.gov.ng/29c6c421588457d93df76bd85356c4f54bc26867.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 11:24:18 GMT
+    - Fri, 17 Aug 2018 21:33:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HtEFV07jHU%2CStXJ7sSHij0; path=/
+    - PHPSESSID=adLjiSZtarJjuI3v6ulpW2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 11:24:20 GMT
+recorded_at: Fri, 17 Aug 2018 21:33:04 GMT
