--- a/www.nass.gov.ng/55ab728c108631d7efb8ff27725a28ce1da02f0e.yml
+++ b/www.nass.gov.ng/55ab728c108631d7efb8ff27725a28ce1da02f0e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 11:26:29 GMT
+    - Fri, 17 Aug 2018 21:34:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UlHbI%2CAkhGqpsh9R4y0rX1; path=/
+    - PHPSESSID=u5YYvmDNGN4yAnZsBdaqW0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 11:26:30 GMT
+recorded_at: Fri, 17 Aug 2018 21:34:44 GMT
