--- a/www.nass.gov.ng/a1a4efd6ed11b01cec4799c3cfdd89006f5ef079.yml
+++ b/www.nass.gov.ng/a1a4efd6ed11b01cec4799c3cfdd89006f5ef079.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 11:31:54 GMT
+    - Fri, 17 Aug 2018 21:39:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9sgy5lGh8%2CVa4ACTUMVXT2; path=/
+    - PHPSESSID=%2CTd8f8iskzUJRZ1a7wUbq1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 11:31:54 GMT
+recorded_at: Fri, 17 Aug 2018 21:39:45 GMT
