--- a/www.nass.gov.ng/65b07a6b4422e5d755153a9ad2825106cac834ec.yml
+++ b/www.nass.gov.ng/65b07a6b4422e5d755153a9ad2825106cac834ec.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 11:34:25 GMT
+    - Fri, 17 Aug 2018 21:41:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Eh93mulQoDrYvLc8SY0bn2; path=/
+    - PHPSESSID=G1YjDP4E5%2Cy%2CQUIi3qbhV1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 11:34:25 GMT
+recorded_at: Fri, 17 Aug 2018 21:41:31 GMT
