--- a/www.nass.gov.ng/4e0f750aaeb8fdf413650065cf6cc6a5f8312d5c.yml
+++ b/www.nass.gov.ng/4e0f750aaeb8fdf413650065cf6cc6a5f8312d5c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 11:50:54 GMT
+    - Fri, 17 Aug 2018 21:55:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9Z6-5OWfEe4%2Caa5yS%2C12L3; path=/
+    - PHPSESSID=-sSjWCc0HqtZOt9LtLKGq3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 11:50:54 GMT
+recorded_at: Fri, 17 Aug 2018 21:55:46 GMT
