--- a/www.nass.gov.ng/a411c9b3d518591f717e56ac2704d11cdea35712.yml
+++ b/www.nass.gov.ng/a411c9b3d518591f717e56ac2704d11cdea35712.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 11:56:03 GMT
+    - Fri, 17 Aug 2018 22:01:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H7XvCiV54%2Cfh9uXkZbdFh2; path=/
+    - PHPSESSID=og39czlYbR34B1KiB2ULP0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 11:56:03 GMT
+recorded_at: Fri, 17 Aug 2018 22:01:16 GMT
