--- a/www.nass.gov.ng/435c0e360c287ddbb7d6570d622a6ee787501069.yml
+++ b/www.nass.gov.ng/435c0e360c287ddbb7d6570d622a6ee787501069.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:09:34 GMT
+    - Fri, 17 Aug 2018 22:10:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TUWU%2C2RlfQoA0NsmHC8FA0; path=/
+    - PHPSESSID=fr7qIiW7LjvAOp9dbrXAL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:09:34 GMT
+recorded_at: Fri, 17 Aug 2018 22:10:51 GMT
