--- a/www.nass.gov.ng/e85a3f4671b4c179fee11f6cc9f96504abd80dd4.yml
+++ b/www.nass.gov.ng/e85a3f4671b4c179fee11f6cc9f96504abd80dd4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:14:06 GMT
+    - Fri, 17 Aug 2018 22:14:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FVkSGk4q3T14HB19XadOl1; path=/
+    - PHPSESSID=wt%2Cht2mVODl73287JXQ-x3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:14:07 GMT
+recorded_at: Fri, 17 Aug 2018 22:14:21 GMT
