--- a/www.nass.gov.ng/ef85ea08deed02805445acc19a68bf570b5fa0cc.yml
+++ b/www.nass.gov.ng/ef85ea08deed02805445acc19a68bf570b5fa0cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:17:36 GMT
+    - Fri, 17 Aug 2018 22:16:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mFKbbQi73C7piI1-NcOEE3; path=/
+    - PHPSESSID=ORythE%2C2PJG2oYewsDG8k0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:17:37 GMT
+recorded_at: Fri, 17 Aug 2018 22:16:44 GMT
