--- a/www.nass.gov.ng/fde147e9ce6fb8bb39cae3129b1a19e86ea816ee.yml
+++ b/www.nass.gov.ng/fde147e9ce6fb8bb39cae3129b1a19e86ea816ee.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:22:31 GMT
+    - Fri, 17 Aug 2018 22:20:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CEnn%2CTWTYqy6Ibt-ipF0n2; path=/
+    - PHPSESSID=0PTN5PkMW8TBPPqNqgxUR0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:22:31 GMT
+recorded_at: Fri, 17 Aug 2018 22:20:25 GMT
