--- a/www.nass.gov.ng/100f7c561771380aac5a986d9aeba0c830f8bc1d.yml
+++ b/www.nass.gov.ng/100f7c561771380aac5a986d9aeba0c830f8bc1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:31:11 GMT
+    - Fri, 17 Aug 2018 22:28:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=g%2C8szTqwAppx1lN-NIERo3; path=/
+    - PHPSESSID=1C7uTtbKlmjJRSSynWi1M3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:31:12 GMT
+recorded_at: Fri, 17 Aug 2018 22:28:45 GMT
