--- a/www.nass.gov.ng/fecbc7cd15445dcc9e6608c5b2f159bc74ffdb80.yml
+++ b/www.nass.gov.ng/fecbc7cd15445dcc9e6608c5b2f159bc74ffdb80.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:32:21 GMT
+    - Fri, 17 Aug 2018 22:29:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4ScpYddh-5j395WZMmux82; path=/
+    - PHPSESSID=RnqUxKA1UR%2C79BDwA%2CLik2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:32:21 GMT
+recorded_at: Fri, 17 Aug 2018 22:29:56 GMT
