--- a/www.nass.gov.ng/9ffefc7d40d6e09126dc9e84c91db14388bb686b.yml
+++ b/www.nass.gov.ng/9ffefc7d40d6e09126dc9e84c91db14388bb686b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:39:25 GMT
+    - Fri, 17 Aug 2018 22:35:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sngcSFKdgqtFTEpdu%2CzRM3; path=/
+    - PHPSESSID=%2Cedu0irpEbaEBihnmpKzZ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:39:25 GMT
+recorded_at: Fri, 17 Aug 2018 22:35:28 GMT
