--- a/www.nass.gov.ng/fc22d9457586d19005ca60a3bd828daee1fa5fa4.yml
+++ b/www.nass.gov.ng/fc22d9457586d19005ca60a3bd828daee1fa5fa4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:41:39 GMT
+    - Fri, 17 Aug 2018 22:36:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GRH30iDWFVwpny9VC%2C1lw0; path=/
+    - PHPSESSID=qpt7A1vlvVRRhkgurrMyY0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:41:39 GMT
+recorded_at: Fri, 17 Aug 2018 22:36:58 GMT
