--- a/www.nass.gov.ng/f780c703e2929dda6ecdeddb9443135252030344.yml
+++ b/www.nass.gov.ng/f780c703e2929dda6ecdeddb9443135252030344.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:50:25 GMT
+    - Fri, 17 Aug 2018 22:45:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7oP0yh30nG4-pflEtCqRP0; path=/
+    - PHPSESSID=olVlb0kNz%2CmSikgOvPTlI2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:50:26 GMT
+recorded_at: Fri, 17 Aug 2018 22:45:44 GMT
