--- a/www.nass.gov.ng/b5828353ae0645860579652e5b51780ccb491474.yml
+++ b/www.nass.gov.ng/b5828353ae0645860579652e5b51780ccb491474.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:51:41 GMT
+    - Fri, 17 Aug 2018 22:46:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZCd-8KbiSkcL%2CtqaYyrRQ1; path=/
+    - PHPSESSID=RpgKhd8FhL3Z02BCCTGzL2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:51:41 GMT
+recorded_at: Fri, 17 Aug 2018 22:46:41 GMT
