--- a/www.nass.gov.ng/c3ac48777b325bd12a83ee492d9e0bd00d85cb95.yml
+++ b/www.nass.gov.ng/c3ac48777b325bd12a83ee492d9e0bd00d85cb95.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 12:55:28 GMT
+    - Fri, 17 Aug 2018 22:50:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ng8UgHeOVE%2CPwJ606BNCn2; path=/
+    - PHPSESSID=jg7KzzN-f0AjHow-karwD3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 12:55:28 GMT
+recorded_at: Fri, 17 Aug 2018 22:50:33 GMT
