--- a/www.nass.gov.ng/d9de7f13b6b7131198bc17efe614419c34b89a9e.yml
+++ b/www.nass.gov.ng/d9de7f13b6b7131198bc17efe614419c34b89a9e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:02:37 GMT
+    - Fri, 17 Aug 2018 22:55:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ab5foKUFEqgby3JkYM1NQ1; path=/
+    - PHPSESSID=Ht7fa%2C8Jwp-dumPlBsG%2C72; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:02:37 GMT
+recorded_at: Fri, 17 Aug 2018 22:55:48 GMT
