--- a/www.nass.gov.ng/c6ebac4b01e901d4720c3545d81320e63b7d21a9.yml
+++ b/www.nass.gov.ng/c6ebac4b01e901d4720c3545d81320e63b7d21a9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:04:35 GMT
+    - Fri, 17 Aug 2018 22:57:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TwLpPhJ-mZ4WhAmd5gT2b2; path=/
+    - PHPSESSID=rBKrfvsbXb68%2CsMGIvuFh1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:04:35 GMT
+recorded_at: Fri, 17 Aug 2018 22:57:31 GMT
