--- a/www.nass.gov.ng/e60b8da6b2c1c3f95eae4ead85f0f31539a1fca6.yml
+++ b/www.nass.gov.ng/e60b8da6b2c1c3f95eae4ead85f0f31539a1fca6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:07:43 GMT
+    - Fri, 17 Aug 2018 23:00:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TSl617TG%2CH2Fi52F57dYT3; path=/
+    - PHPSESSID=qsHyOFS46FIRdb1frmID53; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:07:43 GMT
+recorded_at: Fri, 17 Aug 2018 23:00:37 GMT
