--- a/www.nass.gov.ng/4396013797159a3010da179d2f61592b822768b2.yml
+++ b/www.nass.gov.ng/4396013797159a3010da179d2f61592b822768b2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:15:05 GMT
+    - Fri, 17 Aug 2018 23:05:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2NpUi3c8x2dT-NuD9G1%2C-0; path=/
+    - PHPSESSID=MQm%2Cr438GG%2Ccd5czF8DQc2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:15:05 GMT
+recorded_at: Fri, 17 Aug 2018 23:05:46 GMT
