--- a/www.nass.gov.ng/a64a2d5247d7335a5563d3cab1d9811433f9ce1a.yml
+++ b/www.nass.gov.ng/a64a2d5247d7335a5563d3cab1d9811433f9ce1a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:17:44 GMT
+    - Fri, 17 Aug 2018 23:07:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-PdDRJa-TT%2CpMVeM%2CTqBM3; path=/
+    - PHPSESSID=Rps9xmdWhfZnzMJTUTvY73; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:17:44 GMT
+recorded_at: Fri, 17 Aug 2018 23:07:25 GMT
