--- a/www.nass.gov.ng/f685864ac60c218e6ed272d8183ec696f317182e.yml
+++ b/www.nass.gov.ng/f685864ac60c218e6ed272d8183ec696f317182e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:24:56 GMT
+    - Fri, 17 Aug 2018 23:14:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sslRO6cH3j05RlhnRX%2Can2; path=/
+    - PHPSESSID=sLqmewOJ1BaxNLaTxosMa0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:24:56 GMT
+recorded_at: Fri, 17 Aug 2018 23:14:34 GMT
