--- a/www.nass.gov.ng/3235eb9d18cc5ad1ed7575e88076234e8611b0bd.yml
+++ b/www.nass.gov.ng/3235eb9d18cc5ad1ed7575e88076234e8611b0bd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:27:32 GMT
+    - Fri, 17 Aug 2018 23:17:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=k60c7e%2CJ0%2CC5R1Jtn47jv1; path=/
+    - PHPSESSID=rsis14%2C8klHRgq31cxP0W2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:27:33 GMT
+recorded_at: Fri, 17 Aug 2018 23:17:55 GMT
