--- a/www.nass.gov.ng/b5848ea20293bb8e210857fae64800264f00f0a4.yml
+++ b/www.nass.gov.ng/b5848ea20293bb8e210857fae64800264f00f0a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:28:33 GMT
+    - Fri, 17 Aug 2018 23:19:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Jd03GqhZsM2fx8mjl9BM80; path=/
+    - PHPSESSID=OPcCp9WHEeE%2CPSncaOE7v3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:28:33 GMT
+recorded_at: Fri, 17 Aug 2018 23:19:32 GMT
