--- a/www.nass.gov.ng/883bb8348c43cdc1799da9a76d72721bd7301292.yml
+++ b/www.nass.gov.ng/883bb8348c43cdc1799da9a76d72721bd7301292.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:30:33 GMT
+    - Fri, 17 Aug 2018 23:21:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8Sby5IArOPmIZYR83ziF72; path=/
+    - PHPSESSID=lQiXsRs%2CKpfeDLj8VdN202; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:30:33 GMT
+recorded_at: Fri, 17 Aug 2018 23:21:18 GMT
