--- a/www.nass.gov.ng/d23cb74ea7813ca33774660c74e8542d8e6048ab.yml
+++ b/www.nass.gov.ng/d23cb74ea7813ca33774660c74e8542d8e6048ab.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:34:39 GMT
+    - Fri, 17 Aug 2018 23:26:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yF77pzgoAmnxNjEE-wn-30; path=/
+    - PHPSESSID=3kV4V9PaDQ%2C3L8DOribYw2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:34:40 GMT
+recorded_at: Fri, 17 Aug 2018 23:26:03 GMT
