--- a/www.nass.gov.ng/a5e900ce515b3fd4527b4a0038d74775474938e1.yml
+++ b/www.nass.gov.ng/a5e900ce515b3fd4527b4a0038d74775474938e1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:39:08 GMT
+    - Fri, 17 Aug 2018 23:30:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HkyV8U%2Cg2GrzYMSAe3MuU1; path=/
+    - PHPSESSID=AU8pZEw-4uwQNJggm7c7k1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:39:08 GMT
+recorded_at: Fri, 17 Aug 2018 23:30:57 GMT
