--- a/www.nass.gov.ng/a497ef8d057a1ace6cb9b34f46d3ee0b1d7bd574.yml
+++ b/www.nass.gov.ng/a497ef8d057a1ace6cb9b34f46d3ee0b1d7bd574.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:42:38 GMT
+    - Fri, 17 Aug 2018 23:36:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yPje9vuqImz7kYNJ%2CWRgE1; path=/
+    - PHPSESSID=22o2q5aINcFAKylzVzrkz2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:42:39 GMT
+recorded_at: Fri, 17 Aug 2018 23:36:05 GMT
