--- a/www.nass.gov.ng/aecee86a3c413ceff3acae032b00557a1daebe2b.yml
+++ b/www.nass.gov.ng/aecee86a3c413ceff3acae032b00557a1daebe2b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:48:13 GMT
+    - Fri, 17 Aug 2018 23:42:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zXB55syytwDd5idGSmZ0O3; path=/
+    - PHPSESSID=wR2%2CjGFpd8PE%2CB2jB4mJF0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:48:14 GMT
+recorded_at: Fri, 17 Aug 2018 23:42:24 GMT
