--- a/www.nass.gov.ng/ba52fee1632f5d499c1975efcc5b868785f60f59.yml
+++ b/www.nass.gov.ng/ba52fee1632f5d499c1975efcc5b868785f60f59.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 13:49:09 GMT
+    - Fri, 17 Aug 2018 23:43:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vZccEXnBPRs2VjpflOy001; path=/
+    - PHPSESSID=PmXU8%2CFRrN4Evfwo3yDOC2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 13:49:09 GMT
+recorded_at: Fri, 17 Aug 2018 23:43:56 GMT
